--- a/src/components/css/llistat.css
+++ b/src/components/css/llistat.css
@@ -1,19 +1,34 @@
 .grid-container {
   display: grid;
-  grid-template-rows: 100px 100px;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(2, 1fr);
   grid-gap: 20px;
+  grid-auto-rows: 120px 120px;
+  
+ 
 }
 
+.grid-item{
+  height: 130px;
+  width: 100px;
+  float: left; 
+  margin-bottom: 40px; 
+  padding: 10px;
+}
 .logo {
-  opacity: 0.30;
-  
+  opacity: 0.50;
+ 
+
+}
+
+.checkbox{
+  width: 25px;
+  height: auto;
+  display: block;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .logo:hover {
-  opacity: 1;
-}
-
-.logo:active .logo{
   opacity: 1;
 }
